fixed checkboxes not showing on categories modal

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ body {
     user-select: none;
 }
 .checkbox input[type="checkbox"] {
-    display:none;
+    /*display:none;*/
 }
 .checkbox input[type="checkbox"] + label  {
     display: inline-block;
